fix disabled styles on IOS (#311)
* fix disabled styles on IOS

* fix disabled styles on IOS

--- a/app/styles/components/c-support-form.scss
+++ b/app/styles/components/c-support-form.scss
@@ -23,6 +23,15 @@
 
   form {
 
+    input,
+    textarea,
+    select {
+
+      &:disabled {
+        opacity: 1; //neccesary on IOS
+      }
+    }
+
     .contain-form {
       display: flex;
       flex-wrap: wrap;
